[package]
name = "robust-tokio-modbus"
description = "tokio-modbus based robust modbus library"
version = "0.1.0"
edition = "2021"
authors = ["Marc Freudenberg <freudenbergmarc@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "github.com/washed/robust-tokio-modbus"
keywords = ["modbus", "tokio", "reconnect", "robust"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
tokio-modbus = "0.15.0"
tokio-retry = "0.3.0"
tracing = "0.1.40"
